--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "bitcoinjs-message": "^2.0.0",
     "bitcore-lib": "^0.15.0",
     "body-parser": "^1.18.3",
+    "bs58": "^4.0.1",
     "crypto-js": "^3.1.9-1",
-    "express": "^4.16.3",
+    "elliptic": "^6.4.1",
+    "express": "^4.16.4",
+    "js-sha256": "^0.9.0",
     "level": "^4.0.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.5",
+    "ripemd160": "^2.0.2",
+    "secure-random": "^1.1.1"
   }
 }
