--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "level": "^4.0.0",
     "nodemon": "^1.18.5",
     "ripemd160": "^2.0.2",
-    "secure-random": "^1.1.1"
+    "secure-random": "^1.1.1",
+    "validator": "^10.8.0"
   }
 }
